CHANGELOG

== Apr 29, 2012
* Added Opensearch.xml (to search in Chrome url bar)
* [OpenSearch 1.1 Draft 5] with rss, atom, and pagination
* Greatly improved performance of Search and Indexes
* Added eager loading joins to SQL search
* Added RSS/Atom support for search
* Upgraded Carrierwave to 0.6.2 
* Upgraded other gems

== Apr 27, 2012
* Improved Comments email
* Improved the Roles Permissions for admin pages
* Changed TinyMCE Editor to html5 mode (fix character encoding)
* Emails now should be better formatted

== Apr 26, 2012
* Rspec and Factory_Girl updated to latest
* Updated all rspec tests for new versions of gem
* Added Image Uploading specs for carrierwave
* Adjusted Youtube image size to be 100px wide max

== Apr 25, 2012
* Fix for Double submitting button on forms
* Added Upgrade/Dowgrade option for Users/AdminUsers 
* Roles are only apliable to Admin Users
* Allow to create users/adminUsers on admin interface
* Added email alert for new Comments /admin/comment_subscriptions
* Added youtube image to email if it's a video
* Youtube image bug fix on Highlights
* Added a few Rspec tests
* other various fixes and improvements
* Updated Gems

== Apr 24, 2012
* Fixed bug in mail links
* Fixed Replacing of unwanted characters
* Updated Gems
* Added Alt tag to images

== Apr 21, 2012
* Added Resque Scheduler for Publication Date in items
* Scheduling Twitter Status updates (resque-scheduler)
* Scheduling Email Notifications
* Updated RSPEC tests
* Added Subscriptions and Alerts to /admin/
* html boilerplate for emails [http://htmlemailboilerplate.com]

== Apr 20, 2012
* Added CSS Style for Emails

== Apr 19, 2012
* Added Email Subscriptions
* Added PostmarkApp for sending emails
* Changed Logging style
* Added Rspec Tests for email subscriptions

== Apr 18, 2012
* Improved Author Page
* Added more Rspec Tests
* fixed bug on author page with avatar
* Added Category to admin/items index page
* Added Youtube screenshot to admin/items