@@ -6,7 +6,7 @@ class SubscriptionMailer < ActionMailer::Base
   
   def new_item_email(item_id)
     @item = Item.find(item_id)
-    @url  = url_for(item_path(@item, :only_path => false, :protocol => 'http'))
+    @url  = url_for(item_path(@item, :ref => "email", :only_path => false, :protocol => 'http'))
     @subscriptions = Subscription.where("email is not NULL AND item_id is NULL").all
     @emails_list = @subscriptions.map{|t| t.email}.join(",")
     
